# OpenGL-Rust-Basic

./: Cargo.toml  README.md
src/: camera.rs  index_buffer.rs  lib.rs  light.rs  main.rs  renderer.rs  shader.rs  texture.rs  vertex_array.rs  vertex_buffer.rs  window.rs
src/shader/: cubes.frag  cubes.vert  fragment_shader.glsl  light.frag  light.vert  object.frag  object.vert  vertex_shader.glsl
src/vertex_array/: vertex_buffer_layout.rs
