[package]
name = "opengl1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
gl = "0.14"
image = "0.25"
nalgebra-glm = "0.19"
glutin = "0.32"
winit = "0.30"
glutin-winit = "0.5.0"